# cudaMatrixCalculator

./: CMakeLists.txt  Matrix.cu  Matrix.cuh  main.cu  test.py
kernels/: Gaus.cuh  PLUfactorisation.cuh  utils.cuh
